# turtle_graphics

./: CMakeLists.txt  Meeting-notes.md  README.md  commands.json  images_donatello.qrc  shapes.json
doc/: Document.docx  ~$cument.docx  ~WRL0005.tmp
plan/: PLAN.docx
src/: main.cpp  main_test.cpp  paintarea.cpp  paintarea.h  turtle.cpp  turtle.h  turtle_window.cpp  turtle_window.h  turtle_window.ui
tests/: readme.md  test_boundry.h  test_square.h
